--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
     <main>
-      <div class="time">time: 00:00</div>
+      <div class="time">00:00</div>
       <div class="board-container">
         <div class="board-row row-0">
           <div class="board-block" data-index="00"></div>
@@ -71,26 +71,26 @@
       <div class="keyboard-container">
         <div class="keyboard-row" data-key="ENTER">
           <div class="keyboard" data-key="Q">q</div>
-          <div class="keyboard" data-key="Q">w</div>
-          <div class="keyboard" data-key="Q">e</div>
-          <div class="keyboard" data-key="Q">r</div>
-          <div class="keyboard" data-key="Q">t</div>
-          <div class="keyboard" data-key="Q">y</div>
-          <div class="keyboard" data-key="Q">u</div>
-          <div class="keyboard" data-key="Q">i</div>
-          <div class="keyboard" data-key="Q">o</div>
-          <div class="keyboard" data-key="Q">p</div>
+          <div class="keyboard" data-key="W">w</div>
+          <div class="keyboard" data-key="E">e</div>
+          <div class="keyboard" data-key="R">r</div>
+          <div class="keyboard" data-key="T">t</div>
+          <div class="keyboard" data-key="Y">y</div>
+          <div class="keyboard" data-key="U">u</div>
+          <div class="keyboard" data-key="I">i</div>
+          <div class="keyboard" data-key="O">o</div>
+          <div class="keyboard" data-key="P">p</div>
         </div>
         <div class="keyboard-row">
           <div class="keyboard" data-key="A">a</div>
-          <div class="keyboard" data-key="A">s</div>
-          <div class="keyboard" data-key="A">d</div>
-          <div class="keyboard" data-key="A">f</div>
-          <div class="keyboard" data-key="A">g</div>
-          <div class="keyboard" data-key="A">h</div>
-          <div class="keyboard" data-key="A">j</div>
-          <div class="keyboard" data-key="A">k</div>
-          <div class="keyboard" data-key="A">l</div>
+          <div class="keyboard" data-key="S">s</div>
+          <div class="keyboard" data-key="D">d</div>
+          <div class="keyboard" data-key="F">f</div>
+          <div class="keyboard" data-key="G">g</div>
+          <div class="keyboard" data-key="H">h</div>
+          <div class="keyboard" data-key="J">j</div>
+          <div class="keyboard" data-key="K">k</div>
+          <div class="keyboard" data-key="L">l</div>
         </div>
         <div class="keyboard-row">
           <div class="keyboard keyboard_enter" data-key="ENTER">ENTER</div>
@@ -105,7 +105,8 @@
         </div>
       </div>
     </main>
+
     <footer></footer>
   </body>
-  <script src="app.js"></script>
+  <script src="/js/app.js"></script>
 </html>
